ircutils/irc.peg
package ircutils

import "github.com/pointlander/peg/tree"

type IRCParser Peg {
 *tree.Tree
}

Message <- Prefix? Command Params? CRLF {fmt.Println(buffer[begin:end])}

Prefix <- ":" ( Server / Person )

Server <- ( AlphaNum / SquareBrackets / [ _ - . | * ] )+ ! ( User / Host ) S

Person <- Nick User? Host? S

Nick <- ( AlphaNum / SquareBrackets / CurlyBrackets / Backtick / [ _ - ^ | \\ ])+

User <- "!" ( AlphaNum / SquareBrackets / [ _ - = . ~ ^ \\ ` ] )+

Host <- "@" ( AlphaNum / SquareBrackets / [ _ - . | : / ] )+

Command <- ( Letter+ / ([0-9] [0-9] [0-9]) )

Params <- S Middle* Trailing?

Middle <- ( !":" !S NonTerminating )+ S?

Trailing <- ":" ( NonTerminating / S )*

NonTerminating  <-  [^ U+000A U+000D ]

SquareBrackets <- [ [ U+005D ]

CurlyBrackets <-  [ { } ]

Backtick <- [ U+0060 ]

AlphaNum <- ( Letter / Num )

Letter <- [ a-z ] / [ A-Z ] 

Num <- [ 0-9 ]

CRLF <- [ U+000D ] [ U+000A ]

S <-  [ U+0020] +
